--- a/app/admin/template/administrative/customer.twig
+++ b/app/admin/template/administrative/customer.twig
@@ -252,7 +252,7 @@
 
 			{% else %}
 
-				<p><em>{% trans "No tags found." %}</em></p>
+				<p><em>{% trans "No customers found." %}</em></p>
 
 			{% endfor %}
 			</div>
