--- a/app/admin/template/administrative/incoming.twig
+++ b/app/admin/template/administrative/incoming.twig
@@ -201,7 +201,7 @@
 							</a>
 						</td>
 						<td width="20">
-							<a href="/administrative/incoming?action=delete&id={{ incoming.id }}" title="{% trans "Delete incoming" %}">
+							<a href="/administrative/incoming?action=delete&id={{ incoming.id }}" title="{% trans "Delete incoming" %}" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure you want to delete this document?" %}">
 								<span class="glyphicon glyphicon-remove"></span>
 							</a>
 						</td>
