--- a/app/admin/template/administrative/supplier.twig
+++ b/app/admin/template/administrative/supplier.twig
@@ -63,7 +63,7 @@
 
 					<div class="form-group{% if 'vat' in errors|keys %} has-error{% endif %}">
 						<label for="vat" class="control-label col-xs-3">{% trans "Vat" %}</label>
-						<div class="col-xs-5">
+						<div class="col-xs-9">
 							<input type="text" name="supplier[vat]" id="vat" class="form-control" value="{{ supplier.vat }}">
 							{{ form.invalid_input('vat', errors) }}
 						</div>
@@ -71,9 +71,17 @@
 
 					<div class="form-group{% if 'accounting_identifier' in errors|keys %} has-error{% endif %}">
 						<label for="accounting_identifier" class="control-label col-xs-3">{% trans "Accounting identifier" %}</label>
-						<div class="col-xs-5">
-							<input type="text" name="supplier[accounting_identifier]" id="vat" class="form-control" value="{{ supplier.accounting_identifier }}">
+						<div class="col-xs-9">
+							<input type="text" name="supplier[accounting_identifier]" class="form-control" value="{{ supplier.accounting_identifier }}">
 							{{ form.invalid_input('accounting_identifier', errors) }}
+						</div>
+					</div>
+
+					<div class="form-group{% if 'iban' in errors|keys %} has-error{% endif %}">
+						<label for="accounting_identifier" class="control-label col-xs-3">{% trans "IBAN" %}</label>
+						<div class="col-xs-9">
+							<input type="text" name="supplier[iban]" id="vat" class="form-control" value="{{ supplier.iban }}">
+							{{ form.invalid_input('iban', errors) }}
 						</div>
 					</div>
 
@@ -95,6 +103,11 @@
 				</div>
 			</div>
 		</form>
+		<script type="text/javascript">
+			$(document).ready(function() {
+				$('input[name="supplier[iban]"]').mask('SSAA AAAA 0000 0000 0000 0000 S00', { placeholder: '____ ____ ____ ____ ____ ____ ___'  });
+			});
+		</script>
 
 	{% elseif action == 'add' %}
 
@@ -154,7 +167,7 @@
 
 					<div class="form-group{% if 'vat' in errors|keys %} has-error{% endif %}">
 						<label for="vat" class="control-label col-xs-3">{% trans "Vat" %}</label>
-						<div class="col-xs-5">
+						<div class="col-xs-9">
 							<input type="text" name="supplier[vat]" id="vat" class="form-control" value="{{ env.post.supplier.vat }}">
 							{{ form.invalid_input('vat', errors) }}
 						</div>
@@ -162,9 +175,17 @@
 
 					<div class="form-group{% if 'accounting_identifier' in errors|keys %} has-error{% endif %}">
 						<label for="accounting_identifier" class="control-label col-xs-3">{% trans "Accounting identifier" %}</label>
-						<div class="col-xs-5">
+						<div class="col-xs-9">
 							<input type="text" name="supplier[accounting_identifier]" id="vat" class="form-control" value="{{ supplier.accounting_identifier }}">
 							{{ form.invalid_input('accounting_identifier', errors) }}
+						</div>
+					</div>
+
+					<div class="form-group{% if 'iban' in errors|keys %} has-error{% endif %}">
+						<label for="accounting_identifier" class="control-label col-xs-3">{% trans "IBAN" %}</label>
+						<div class="col-xs-9">
+							<input type="text" name="supplier[iban]" id="vat" class="form-control" value="{{ supplier.iban }}">
+							{{ form.invalid_input('iban', errors) }}
 						</div>
 					</div>
 
@@ -186,7 +207,11 @@
 				</div>
 			</div>
 		</form>
-
+		<script type="text/javascript">
+			$(document).ready(function() {
+				$('input[name="supplier[iban]"]').mask('SS00 0000 0000 0000 0000 00', { placeholder: '____ ____ ____ ____ ____ __'  });
+			});
+		</script>
 
 	{% else %}
 
