--- a/app/admin/template/_default/nav_bar.twig
+++ b/app/admin/template/_default/nav_bar.twig
@@ -1,6 +1,6 @@
 {% if env.session.user is defined %}
 <nav class="navbar navbar-default" role="navigation">
-	<div class="container">
+	<div class="container-fluid">
 		<div class="navbar-header">
 			<a class="navbar-brand" href="#">{{ settings.company }}</a>
 
@@ -23,6 +23,7 @@
 						<li {% if env.module.get_name() == 'administrative_invoice' %}class="active"{% endif %}><a href="/administrative/invoice">{% trans "Invoices" %}</a></li>
 						<li {% if env.module.get_name() == 'administrative_invoice_queue' %}class="active"{% endif %}><a href="/administrative/invoice/queue">{% trans "Invoice queue" %}</a></li>
 						<li {% if env.module.get_name() == 'administrative_supplier' %}class="active"{% endif %}><a href="/administrative/supplier">{% trans "Suppliers" %}</a></li>
+						<li {% if env.module.get_name() == 'export' %}class="active"{% endif %}><a href="/export">{% trans "Exports" %}</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -34,9 +35,19 @@
 						<li class="dropdown-header">{% trans "Documents" %}</li>
 						<li {% if env.module.get_name() == 'administrative_document' %}class="active"{% endif %}><a href="/administrative/document">{% trans "All Documents" %}</a></li>
 						<li {% if env.module.get_name() == 'administrative_document_invoice' %}class="active"{% endif %}><a href="/administrative/document/invoice">&#8627; {% trans "Incoming Invoices" %}</a></li>
+						<li {% if env.module.get_name() == 'administrative_document_creditnote' %}class="active"{% endif %}><a href="/administrative/document/creditnote">&#8627; {% trans "Incoming Creditnotes" %}</a></li>
 						<li role="separator" class="divider"></li>
 						<li {% if env.module.get_name() == 'administrative_incoming' %}class="active"{% endif %}><a href="/administrative/incoming">{% trans "Incoming" %}</a></li>
 						<li {% if env.module.get_name() == 'administrative_tag' %}class="active"{% endif %}><a href="/administrative/tag">{% trans "Tags" %}</a></li>
+					</ul>
+				</li>
+			</ul>
+
+			<ul class="nav navbar-nav">
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Financial" %} <b class="caret"></b></a>
+					<ul class="dropdown-menu">
+						<li {% if env.module.get_name() == 'financial_account' %}class="active"{% endif %}><a href="/financial/account">{% trans "Bank accounts" %}</a></li>
 					</ul>
 				</li>
 			</ul>
