bugfixes: - updating a document to an incoming_invoice, marks it automatically as paid - sorting based on document ID

--- a/app/admin/template/administrative/document/creditnote.twig
+++ b/app/admin/template/administrative/document/creditnote.twig
@@ -81,7 +81,7 @@
 			<table class="table table-hover table-striped table-condensed table-responsive">
 			<thead>
 				<tr>
-					<th>#</th>
+					<th>{{ pager.create_header('#'|trans, 'id')|raw }}</th>
 					<th>{{ pager.create_header('Date'|trans, 'date')|raw }}</th>
 					<th>{{ pager.create_header('Title'|trans, 'title')|raw }}</th>
 					<th>{% trans "Tags" %}</th>
