extra check for incoming invoice: - the combination of supplier + supplier_identifier + price_excl should be unique - if supplier_identifier is already used for the same supplier, a popover is shown

--- a/app/admin/template/_default/form.base.twig
+++ b/app/admin/template/_default/form.base.twig
@@ -22,6 +22,7 @@
 			{% if attribute(errors, field) == 'required' %}{% trans "This field is required." %}
 			{% elseif attribute(errors, field) == 'already_exists' %}{% trans "The e-mail address has already been entered before." %}
 			{% elseif attribute(errors, field) == 'invalid_email' %}{% trans "The e-mail address is invalid." %}
+			{% elseif attribute(errors, field) == 'unique' %}{% trans "This field should be unique" %}
 			{% else %}{{ attribute(errors, field) }}
 			{% endif %}
 		</div>
