--- a/app/admin/template/administrative/incoming.twig
+++ b/app/admin/template/administrative/incoming.twig
@@ -62,7 +62,7 @@
 		{% endfor %}
 
 		<script type="text/javascript">
-			$(window).load(function(){
+			$(document).ready(function(){
 				/**
 				 * Zoom thumbnails
 				 */
