change $(document).ready() to $(window).load()

--- a/app/admin/template/administrative/incoming.twig
+++ b/app/admin/template/administrative/incoming.twig
@@ -62,7 +62,7 @@
 		{% endfor %}
 
 		<script type="text/javascript">
-			$(document).ready(function(){
+			$(window).load(function(){
 				/**
 				 * Zoom thumbnails
 				 */
@@ -78,6 +78,7 @@
 						highest = height;
 					}
 				});
+
 				$('.panel-body').height(highest);
 
 				/**
