Export payments into SEPA format
- Create new SEPA Export class
- New dependency for SEPA XML: https://github.com/wvell/php-sepa-xml
- add field 'BIC' for supplier
- Include composer.lock in git repository

--- a/app/admin/template/administrative/document/invoice/pay.twig
+++ b/app/admin/template/administrative/document/invoice/pay.twig
@@ -63,6 +63,7 @@
 				<div class="col-xs-4">
 					<select name="export_format" class="form-control">
 						<option value="Export_Payment_Belfius">Belfius CSV</option>
+						<option value="Export_Payment_Sepa">SEPA (pain.001.001.03)</option>
 					</select>
 				</div>
 			</div>
