update composer dependencies

--- a/app/admin/template/_default/layout.base.twig
+++ b/app/admin/template/_default/layout.base.twig
@@ -29,13 +29,14 @@
 	<script type="text/javascript" src="/bootstrap-checkbox/js/bootstrap-checkbox.js"></script>
 	<script type="text/javascript" src="/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
 
+	<!-- Syntax check in extractor editor -->
 	<script type="text/javascript" src="/codemirror/lib/codemirror.js"></script>
-<script src="/codemirror/addon/edit/matchbrackets.js"></script>
-<script src="/codemirror/mode/htmlmixed/htmlmixed.js"></script>
-<script src="/codemirror/mode/xml/xml.js"></script>
-<script src="/codemirror/mode/javascript/javascript.js"></script>
-<script src="/codemirror/mode/css/css.js"></script>
-<script src="/codemirror/mode/clike/clike.js"></script>
+	<script src="/codemirror/addon/edit/matchbrackets.js"></script>
+	<script src="/codemirror/mode/htmlmixed/htmlmixed.js"></script>
+	<script src="/codemirror/mode/xml/xml.js"></script>
+	<script src="/codemirror/mode/javascript/javascript.js"></script>
+	<script src="/codemirror/mode/css/css.js"></script>
+	<script src="/codemirror/mode/clike/clike.js"></script>
 	<script type="text/javascript" src="/codemirror/mode/php/php.js"></script>
 
 	{% spaceless %}
