fix IBAN input field for PL IBAN numbers

--- a/app/admin/template/administrative/supplier.twig
+++ b/app/admin/template/administrative/supplier.twig
@@ -113,7 +113,7 @@
 		</form>
 		<script type="text/javascript">
 			$(document).ready(function() {
-				$('input[name="supplier[iban]"]').mask('SSAA AAAA 0000 0000 0000 0000 000', { placeholder: '____ ____ ____ ____ ____ ____ ___'  });
+				$('input[name="supplier[iban]"]').mask('SSAA AAAA 0000 0000 0000 0000 0000', { placeholder: '____ ____ ____ ____ ____ ____ ____'  });
 			});
 		</script>
 
